# OptTest

./: CMakeLists.txt  res.txt
include/: OperatorTester.h  SymPairTester.h  Tester.h
source/: OperatorTester.cpp  SymPairTester.cpp  Tester.cpp  main.cpp
